<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--10121265 Alfaroqih Swandi-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/form_pengisian_data"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOne"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:elevation="8dp"
                app:cardBackgroundColor="#FFF3CD"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="#FFF3CD"
                    android:text="@string/form_berikut_ini_bertujuan_untuk_memberikan_informasi_kepada_pusat_agar_dapat_mudah_dilaporkan"
                    android:textColor="#856404" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/jenis_tes_harus_diisi"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/radioGroupTestType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioRapidAntigen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rapid_antigen" />

                <RadioButton
                    android:id="@+id/radioPCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:buttonTint="@color/black"
                    android:text="@string/pcr" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Tanggal Terkonfirmasi - Harus Diisi"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDateConfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@color/white"
                android:clickable="true"
                android:focusable="false"
                android:hint="Pilih Tanggal"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="NIK - Harus Diisi"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:hint="Masukkan NIK"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Nama - Harus Diisi"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:hint="Masukkan nama" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Tanggal Lahir - Harus Diisi"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="false"
                android:hint="Pilih Tanggal"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Jenis Kelamin - Harus Diisi"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laki - laki" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Perempuan" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Hubungan Dengan Anda - Harus Diisi"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupRelationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Orang tua" />

                <RadioButton
                    android:id="@+id/radioSpouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Suami/Istri" />

                <RadioButton
                    android:id="@+id/radioChild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Anak" />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Kerabat Lainnya" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBoxConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="Selanjutnya"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>